<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/White"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PizzaFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp">

            <LinearLayout
                android:id="@+id/menu_filter_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:padding="8dp"
                    android:text="@string/filters"
                    android:textColor="@color/Grey_4_Dark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/menu_filter_spicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/bg_1003"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="24dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="24sp"
                    android:paddingBottom="8dp"
                    android:text="@string/spicy"
                    android:textColor="@color/Very_Light_Grey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/menu_filter_vegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/bg_1003"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="24dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="24sp"
                    android:paddingBottom="8dp"
                    android:text="@string/vegan"
                    android:textColor="@color/Very_Light_Grey"
                    android:textSize="14sp" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/f_pizza_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_filter_layout"
                app:layout_constraintVertical_bias="0.0" />

            <ProgressBar
                android:id="@+id/f_pizza_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/Black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/f_pizza_recycler_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>