<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/manage_root_layout"
    android:background="@color/Ghost_White"
    tools:context=".activities.Misc">

    <LinearLayout
        android:id="@+id/m_back_to_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_chevron_left"
            app:tint="@color/Black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif-medium"
            android:text="@string/menu"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/White"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_back_to_menu">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/manage_page_label_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="24dp"
                android:background="@color/Ghost_White"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/m_label1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/cart"
                    android:textColor="@color/Black"
                    android:textSize="34sp" />

                <View
                    android:id="@+id/m_l_divider1"
                    android:layout_width="16dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/m_label2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/orders"
                    android:textColor="@color/Grey_4_Dark"
                    android:textSize="34sp" />

                <View
                    android:id="@+id/m_l_divider2"
                    android:layout_width="16dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/m_label3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/info"
                    android:textColor="@color/Grey_4_Dark"
                    android:textSize="34sp" />

            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/manage_viewpager2"
                style="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:flow_wrapMode="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/manage_page_label_layout"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/m_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_credit_card_outline"
        app:backgroundTint="@color/White"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tint="@color/Black" />

</androidx.constraintlayout.widget.ConstraintLayout>